<resources>
    <string name="app_name">Clope Counter</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_raw_clopes">Data : Clopes</string>
    <string name="title_activity_raw_jour">Data : Jours</string>
    <string name="title_activity_settings">Settings</string>
    <string name="add_widget">Add widget</string>

    <!-- MainActivity -->
    <string name="main_today">Aujourd'hui</string>
    <string name="main_avg7">7 jours :</string>
    <string name="main_avg7_predict">7 jours (demain) :</string>
    <string name="main_clope_button">Clope !</string>
    <!-- Menus -->
    <string name="menu_ctx_clope_delete">Supprimer</string>
    <string name="menu_clope_random">Générer des clopes aléatoires</string>
    <string name="menu_main_list_clopes">Data: clopes</string>
    <string name="menu_main_list_jours">Data: jours</string>
    <string name="menu_main_stats">Recalculer les statistiques</string>

    <!-- Jours list -->
    <string name="list_jour_hdr_date">Date</string>
    <string name="list_jour_hdr_nb">Nb</string>
    <string name="list_jour_hdr_avg7">Avg</string>

    <!-- Clopes list -->
    <string name="list_clope_hdr_date">Date</string>

    <!-- Widget -->
    <string name="widget_separator">/</string>
    <string name="widget_button">Clope !</string>


    <!-- Preference keys -->
    <string name="endday_hour_key">endday_hour</string>
    <string name="endday_minute_key">endday_minute</string>
    <string name="purge_delay_key">purge_delay</string>

    <!-- Preferences -->
    <string name="endday_timepicker_title">Heure de fin des jours</string>
    <string name="endday_timepicker_summary">Les jours finissent à %1$02d:%2$02d</string>
    <string name="purge_numberpicker_title">Délai de rétention des clopes</string>
    <string name="purge_numberpicker_summary">L\'historique des clopes est conservé %1$d jours</string>

</resources>
