<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="fill_parent"
     android:layout_width="fill_parent"
    >
    <com.louiscarrese.clopecounter.preferences.TimePickerPreference
        xmlns:custom="http://schemas.android.com/apk/res/com.louiscarrese.clopecounter"
        android:id="@+id/settings_endday_timepicker"
        android:title="@string/endday_timepicker_title"
        android:key="endday_timepicker"
        custom:hourKey="@string/endday_hour_key"
        custom:minuteKey="@string/endday_minute_key"
        />

    <com.louiscarrese.clopecounter.preferences.NumberPickerPreference
        xmlns:custom="http://schemas.android.com/apk/res/com.louiscarrese.clopecounter"
        android:id="@+id/settings_purge_numberpicker"
        android:title="@string/purge_numberpicker_title"
        android:key="@string/purge_delay_key"
        />
    <Preference
        android:id="@+id/settings_refresh_stats"
        android:title="@string/refresh_stats"
        android:key="refresh_stats" />
</PreferenceScreen>