<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:gravity="fill_vertical">
    <LinearLayout
        android:id="@+id/today_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView android:id="@+id/today_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_today"
            android:textSize="24sp"
            />
        <TextView android:id="@+id/today_value"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="24sp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/avg7_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/today_group"
        >
        <TextView android:id="@+id/avg7_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_avg7"
            android:textSize="24sp"
            />
        <TextView android:id="@+id/avg7_value"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="24sp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/avg7_predict_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/avg7_group"
        >
        <TextView android:id="@+id/avg7_predict_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_avg7_predict"
            android:textSize="24sp"
            />
        <TextView android:id="@+id/avg7_predict_value"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="24sp"
            />
    </LinearLayout>

    <Button
        android:id="@+id/add_clope"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_clope_button"
        android:textSize="32sp"
        android:layout_alignParentBottom="true"
        android:onClick="addClope"
        />

</RelativeLayout>